--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
 
-        const contractAddress = "PASTE YOUR CONTRACT ADDRESS HERE"; // Replace this after deployment
+        const contractAddress = "0x7354B4C292746F964497B067EbD1E22aCaf312A9"; // Replace this after deployment
 
         const abi = [
 
